[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/bullet.png" type="Texture" id=1]
[ext_resource path="res://Bullet/Bullet.gd" type="Script" id=2]
[ext_resource path="res://assets/Sounds/hit.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 8.83771

[node name="Bullet" type="KinematicBody2D"]
z_index = 2
collision_layer = 7
collision_mask = 7
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="decayTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="energyBall" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="bulletDie" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="decayTimer" to="." method="_on_decayTimer_timeout"]
[connection signal="finished" from="bulletDie" to="." method="_on_bulletDie_finished"]
